# google-map-voices

./: .gitignore  README.md  main.py  pyproject.toml
.github/actions/setup-project/: action.yml
.github/workflows/: example-usage.yml  json-schema-validation.yml
core/: README.md  kiritan.sh  run.py  tsumugi.sh  ttchan.sh  voicevox.py  voicevox.sh  zundamon.sh
data/: README.md  legacy.json  legacy_messages.xml  legacy_schema.json  voices.json  voices_schema.json
docs/: Audio.md  Build.md  Manual.md  Messages.md
scripts/: README.md  convert_mp3.sh  gen.sh  gen_map_kiritan.sh  gen_voices_template.sh  main.sh  setup.sh
scripts/installer/: README.md  install.sh
scripts/lib/: fetch.sh  test-json-schema.py  test-json-schema.sh
scripts/misc/: gen_legacy_template.sh  gen_voices_template.sh  migrate.sh  setup.sh  setup_python.sh  setup_voicevox.sh
scripts/nekoteki/: downloader.sh  list.sh
