[project]
name = "google-map-voices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "voicevox-core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.1/voicevox_core-0.16.1-cp310-abi3-win_amd64.whl; sys_platform == 'win32' and platform_machine == 'x86_64'",
    "voicevox-core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.1/voicevox_core-0.16.1-cp310-abi3-win32.whl; sys_platform == 'win32' and platform_machine == 'x86'",
    "voicevox-core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.1/voicevox_core-0.16.1-cp310-abi3-macosx_10_12_x86_64.whl; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "voicevox-core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.1/voicevox_core-0.16.1-cp310-abi3-macosx_11_0_arm64.whl; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "voicevox-core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.1/voicevox_core-0.16.1-cp310-abi3-manylinux_2_34_x86_64.whl; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "voicevox-core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.1/voicevox_core-0.16.1-cp310-abi3-manylinux_2_34_aarch64.whl; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "types-jsonschema>=4.25.1.20250822",
    "jsonschema>=4.25.1",
]
